# HEW

./: .gitignore  CMakeLists.txt  Map.tiled-session  readme.txt
Assets/AsepriteFiles/: PlayerCharacter.aseprite  PlayerCharacterAttk.aseprite  PlayerMove.aseprite  Tileset.aseprite
Assets/AsepriteFiles/Player/: PlayerCharacterAttk0Effect.aseprite  PlayerCharacterAttk2Effect.aseprite
Assets/DuskBorne-ArchDemon/AsepriteFiles/: ArchDemonBasicAtk001.aseprite  ArchDemonIdle001.aseprite
Assets/Enemy/ArchDemon/: ArchDemonAttk.aseprite  ArchDemonAttkVFX.aseprite  ArchDemonDeath.aseprite  ArchDemonHurt.aseprite  ArchDemonIdle.aseprite
Assets/Enemy/ArchDemon/ArchDemonAttack/: ArchDemonAtk001.aseprite
Assets/Enemy/Drone/: DroneIdle.aseprite
Assets/Enemy/EnemyHitEffect/: EnemyHitEffect.aseprite  EnemyHitEffect.json
Assets/Enemy/Mine/: MineAttk.aseprite  MineAttkVFX.aseprite  MineIdle.aseprite
Assets/Enemy/Mine/AttkVFX/: MineAttkVFX.json
Assets/Enemy/Mine/MineAttk/: MineAttk.json
Assets/Enemy/Mine/MineIdle/: MineIdle.json
Assets/Enemy/UGV/: AttackWindup.aseprite  AttackWindup.json  UGVIdle.aseprite
Assets/Enemy/UGV/UGVAttk/: UGVAttk.aseprite  UGVAttk.json
Assets/Enemy/UGV/UGVIdle/: UGVIdle.json
Assets/Maps/: HEWMaps.tiled-session  SceneTileset.tsx  TestMap.tmx  scene1.tmx
Assets/Maps/MapCsv/: Scene1.csv  TestMap.csv
Assets/Palette/: CharacterPalette.aseprite  EnemyPalette.aseprite  ScenePalette.aseprite  UGVPalette.aseprite
Assets/Player/AsespriteFiles/: PlayerCharacter.aseprite  PlayerCharacterAttk.aseprite  PlayerCharacterMove.aseprite
Assets/Player/AsespriteFiles/VFX/: PlayerCharacterAttk0Effect.aseprite  PlayerCharacterAttk1Effect.aseprite  PlayerCharacterAttk2Effect.aseprite
Assets/Player/PlayerAttk/: PlayerCharacterAttk.json  PlayerCharacterAttk0.json  PlayerCharacterAttk1.json  PlayerCharacterAttk2.json  PlayerCharacterRewindAttk.json  test.json
Assets/Player/PlayerAttk/AttkVFX/: PlayerCharacterAttk0Effect.json  PlayerCharacterAttk1Effect.json  PlayerCharacterAttk2Effect.json
Assets/Player/PlayerIdle/: PlayerCharacterIdle.json
Assets/Player/PlayerKnockedBack/: PlayerCharacterKnockedBack.aseprite  PlayerCharacterKnockedBack.json
Assets/Player/PlayerMove/: PlayerCharacterMove.json  PlayerMove.json
Assets/Tileset/: Tileset.aseprite
Assets/Title/: Title.aseprite
Assets/TutorialAssets/: Tutorial.aseprite
Assets/TutorialAssets/InGameTutorial/: SkillIndicator.aseprite
Assets/TutorialAssets/MenuTutorial/: Tutorial.aseprite
Src/: main.cpp
Src/Animation/: Animator.cpp  Animator.h  SpriteFrame.h  SpriteSheetLoader.cpp  SpriteSheetLoader.h
Src/Config/: EntityConfigs.h  Input.cpp  Input.h  Structs.h  SystemConfigs.h
Src/Core/: AnimationPaths.h  Game.cpp  Game.h
Src/Game/: Game.cpp  Game.h  Scene.h  SceneManager.cpp  SceneManager.h
Src/Game/Scenes/: EndScene.cpp  EndScene.h  GameScene.cpp  GameScene.h  TitleScene.cpp  TitleScene.h
Src/Lib/: Shape.cpp  Shape.h  conioex.cpp  conioex.h  conioex_New.cpp  conioex_New.h  conioex_custom.cpp  conioex_custom.h
Src/Object/: Object.cpp  Object.h
Src/Object/Entity/: Entity.cpp  Entity.h
Src/Object/Entity/Enemy/: Enemy.cpp  Enemy.h  EnemyStates.h
Src/Object/Entity/Enemy/Mine/: Mine.cpp  Mine.h
Src/Object/Entity/Enemy/UGV/: UGV.cpp  UGV.h
Src/Object/Entity/Player/: PlayerAttackController.cpp  PlayerAttackController.h  PlayerController.cpp  PlayerController.h  PlayerStates.h
Src/Systems/: EnemyManager.h  GameManager.h  TimeManager.cpp  TimeManager.h
Src/Util/: Hitbox.h  MapTriggers.h  Physics.h  TriggerManager.cpp  TriggerManager.h  UIManager.cpp  UIManager.h
Src/VFX/: AttackVFXManager.cpp  AttackVFXManager.h  VFXManager.cpp  VFXManager.h
Src/World/: Camera.cpp  Camera.h  Tile.h  Tilemap.cpp  Tilemap.h  Tileset.h
src/: Game.cpp  Game.h  conioex.h
src/Object/: Object.cpp  Object.h
src/Object/Entity/: Entity.cpp  Entity.h
src/Object/Entity/Player/: PlayerController.cpp  PlayerController.h
src/World/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  Tile.h  Tilemap.cpp  Tilemap.h  Tileset.cpp  Tileset.h
src/core/: Game.cpp  Game.h
src/lib/: Shape.cpp
