cmake_minimum_required(VERSION 4.0)
project(HEW)

set(CMAKE_CXX_STANDARD 20)

add_executable(HEW
        src/lib/conioex.h
        src/lib/conioex.cpp
        src/Object/Entity/Player/PlayerController.cpp
        src/Object/Entity/Player/PlayerController.h
        src/Object/Entity/Player/PlayerController.h
        src/Object/Entity/Entity.cpp
        src/Object/Entity/Entity.h
        src/Object/Entity/Entity.h
        src/core/Game.cpp
        src/core/Game.h
        src/World/Tile.h
        src/World/Camera.cpp
        src/World/Camera.h
        src/World/Camera.h
        src/World/Tilemap.cpp
        src/World/Tilemap.h
        src/Object/Object.cpp
        src/Object/Object.h
        src/Config/EntityConfigs.h
        src/Config/EntityConfigs.h
        src/Systems/TimeManager.cpp
        src/Systems/TimeManager.h
        src/Systems/TimeManager.h
        src/Config/SystemConfigs.h
        Src/VFX/VFXManager.cpp
        Src/VFX/VFXManager.h
        Src/Object/Entity/Enemy/Enemy.cpp
        Src/Object/Entity/Enemy/Enemy.h
        Src/Config/Structs.h
        Src/Config/Structs.h
        Src/Util/HitBox.h
        Src/Util/HitBox.h
        Src/Systems/EnemyManager.h
        Src/World/TileSet.h
        Src/World/TileSet.h
        Src/Animation/SpriteFrame.h
        Src/Animation/SpriteFrame.h
        Src/Animation/SpriteSheetLoader.cpp
        Src/Animation/SpriteSheetLoader.h
        Src/Animation/SpriteSheetLoader.h
        Src/Animation/Animator.cpp
        Src/Animation/Animator.h
        Src/Animation/Animator.h
        Src/Object/Entity/Player/PlayerAttackController.cpp
        Src/Object/Entity/Player/PlayerAttackController.h
        Src/Object/Entity/Player/PlayerStates.h
        Src/Util/Physics.h
        Src/Util/Physics.h)
